--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(04-drill-08 04-Computation/04-drill-08.cpp)
 add_executable(04-drill-09 04-Computation/04-drill-09.cpp)
 add_executable(04-drill-10 04-Computation/04-drill-10.cpp)
 add_executable(04-drill-11 04-Computation/04-drill-11.cpp)
+add_executable(04-excercise-02 04-Computation/04-excercise-02.cpp)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
